Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5429

wsrep-patch related build failures

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 5.5.34-galera
    • 10.1.8
    • Compiling
    • Solaris, Windows

    Description

      MGC does not compile on Windows and Solaris platforms.

      On Solaris:
      In file included from /export/home/buildbot/maria-slave/solaris10-x86/build/mariadb-5.5.34/wsrep/wsrep_api.h:21,
      from /export/home/buildbot/maria-slave/solaris10-x86/build/mariadb-5.5.34/wsrep/wsrep_uuid.c:23:
      /usr/include/stdbool.h:42:2: #error "Use of <stdbool.h> is valid only in a c99 compilation environment."
      ...

      On Windows:
      7>c:\buildbot\win32-debug2\build\wsrep\wsrep_api.h(21): fatal error C1083: Cannot open include file: 'stdbool.h': No such file or directory

      7>C:\buildbot\win32-debug2\build\wsrep\wsrep_loader.c(19): fatal error C1083: Cannot open include file: 'dlfcn.h': No such file or directory

      Attachments

        Activity

          People

            nirbhay_c Nirbhay Choubey (Inactive)
            nirbhay_c Nirbhay Choubey (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.