MDEV-5429: wsrep-patch related build failures

Switch to c99 in order to make stdbool.h work on Solaris.
Also, use macro definitions from my_config.h and my_global.h
to properly check the inclusion of headers and fix dynamic
linking APIs in wsrep library, respectively.